--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -48,6 +48,7 @@
     <uses-permission android:name="com.android.launcher3.permission.READ_SETTINGS" />
     <uses-permission android:name="com.android.launcher3.permission.WRITE_SETTINGS" />
 
+
     <application
         tools:replace="android:icon,android:name"
         android:extractNativeLibs="false"
@@ -79,5 +80,9 @@
              </intent-filter>
         </activity-alias>
 
+        <provider android:name="com.google.android.apps.wallpaper.provider.RecentWallpapersProvider"
+                  android:permission="android.permission.MONITOR_INPUT"
+                  android:exported="true"
+                  android:authorities="com.google.android.apps.wallpaper.recents"/>
     </application>
 </manifest>
