--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -48,6 +48,8 @@
     <uses-permission android:name="com.android.launcher3.permission.READ_SETTINGS" />
     <uses-permission android:name="com.android.launcher3.permission.WRITE_SETTINGS" />
 
+    <provider android:name="com.google.android.apps.wallpaper.provider.RecentWallpapersProvider" android:permission="android.permission.MONITOR_INPUT" android:exported="true" android:authorities="com.google.android.apps.wallpaper.recents"/>
+
     <application
         tools:replace="android:icon,android:name"
         android:extractNativeLibs="false"
